bk_ida/gobmkida/c3/do_find_defense
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_find_defense/src/engine/reading.c:3279:12: error: expected expression
*( _OWORD *)&moves.pos[v234] = *( _OWORD *)&libs[v234]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_find_defense/src/engine/reading.c:3279:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&moves.pos[v234] = *( _OWORD *)&libs[v234]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_find_defense/src/engine/reading.c:3279:43: error: expected expression
*( _OWORD *)&moves.pos[v234] = *( _OWORD *)&libs[v234]; 
                                          ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_find_defense/src/engine/reading.c:3279:35: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&moves.pos[v234] = *( _OWORD *)&libs[v234]; 
                                  ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_find_defense/src/engine/reading.c:3280:12: error: expected expression
*( _OWORD *)&moves.score[v234] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_find_defense/src/engine/reading.c:3280:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&moves.score[v234] = 0LL; 
   ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_find_defense/src/obj/1/reading.o] Error 1
